tests/ui/cast/issue-85586.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-85586.rs:8:13
   |
LL |     let b = (a + 1) as usize;
   |             ^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
